# hexagon

./: .gitignore  README.md  hexagon.html  objects.inv  pyproject.toml  search.html  searchindex.js  tests.html
.github/workflows/: doc.yml  test.yml
_sources/: tests.rst.txt
docs/: conf.py  hexagon.rst  index.rst
docs/_build/doctrees/: environment.pickle  hexagon.doctree  index.doctree  modules.doctree  tests.doctree
docs/_build/html/: .buildinfo  genindex.html  hexagon.html  index.html  modules.html  py-modindex.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt
hexagon/: hexagon_grid.py  png_to_svg.py
outputs/: hex.html  output.html
tests/: test_hexagon_grid.py
