[tool.poetry]
name = "hexagon"
version = "0.1.0"
description = ""
authors = ["LucasSLD <lucassld700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pillow = "^10.1.0"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
